hphp/hack/test/typecheck/new_inference/transitive_error2.php.like_types.exp
File "transitive_error2.php", line 34, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error2.php", line 20, characters 18-18:
Expected D
File "transitive_error2.php", line 29, characters 12-15:
But got dynamic, the result of accessing a property of a dynamic type
